...
                    Text(selectedProduct.price.description)
                        .font(.subheadline)
                        .fontWeight(.bold)
                    
                    Text("I handlekurven: \(amountInCart)")
                    
                    Stepper("Legg til i handlekurv") {
                        
                        selectedProduct.storeInDatabase(context: modelContext)
                        
                        amountInCart = Product.allStoredProducts(withId: selectedProduct.id, inContext: modelContext)
                            .count
                        
...
